@@ -1,3 +1,5 @@
+fixed the status messages so that they should be cleared properly.
+
 fixed disconnected imap autocaching. 
 
 caching messages when using disconnected imap no longer marks the messages
